--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 		<spring-retry.version>1.3.1</spring-retry.version>
 		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
 		<micrometer.version>2.0.0-SNAPSHOT</micrometer.version>
+		<micrometer-tracing.version>1.0.0-SNAPSHOT</micrometer-tracing.version>
 		<jackson.version>2.13.1</jackson.version>
 
 		<!-- optional production dependencies -->
