--- a/spring-batch-test/pom.xml
+++ b/spring-batch-test/pom.xml
@@ -86,5 +86,11 @@
 			<version>${slf4j.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-integration-test</artifactId>
+			<version>${micrometer-tracing.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
