--- a/spring-batch-test/pom.xml
+++ b/spring-batch-test/pom.xml
@@ -92,5 +92,11 @@
 			<version>${micrometer-tracing.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-test</artifactId>
+			<version>${micrometer.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
