--- a/pom.xml
+++ b/pom.xml
@@ -51,20 +51,20 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.0.0-M2</spring-framework.version>
+		<spring-framework.version>6.0.0-SNAPSHOT</spring-framework.version>
 		<spring-retry.version>1.3.1</spring-retry.version>
-		<spring-integration.version>6.0.0-M1</spring-integration.version>
-		<micrometer.version>2.0.0-M2</micrometer.version>
+		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
+		<micrometer.version>2.0.0-SNAPSHOT</micrometer.version>
 		<jackson.version>2.13.1</jackson.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-geode.version>3.0.0-M1</spring-data-geode.version>
-		<spring-data-commons.version>3.0.0-M1</spring-data-commons.version>
-		<spring-data-jpa.version>3.0.0-M1</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.0.0-M1</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.0-M1</spring-kafka.version>
-		<spring-amqp.version>3.0.0-M1</spring-amqp.version>
-		<spring-ldap.version>3.0.0-M1</spring-ldap.version>
+		<spring-data-geode.version>3.0.0-SNAPSHOT</spring-data-geode.version>
+		<spring-data-commons.version>3.0.0-SNAPSHOT</spring-data-commons.version>
+		<spring-data-jpa.version>3.0.0-SNAPSHOT</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.0.0-SNAPSHOT</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.0-SNAPSHOT</spring-kafka.version>
+		<spring-amqp.version>3.0.0-SNAPSHOT</spring-amqp.version>
+		<spring-ldap.version>3.0.0-SNAPSHOT</spring-ldap.version>
 		<avro.version>1.9.2</avro.version>
 		<gson.version>2.8.9</gson.version>
 		<hibernate-core-jakarta.version>5.6.3.Final</hibernate-core-jakarta.version>
@@ -112,7 +112,7 @@
 		<jsonassert.version>1.5.0</jsonassert.version>
 
 		<!-- samples dependencies -->
-		<spring-rabbit.version>3.0.0-M1</spring-rabbit.version>
+		<spring-rabbit.version>3.0.0-SNAPSHOT</spring-rabbit.version>
 		<quartz.version>2.3.2</quartz.version>
 		<prometheus_pushgateway.version>0.11.0</prometheus_pushgateway.version>
 		<groovy.version>2.5.14</groovy.version>
