--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 		<!-- production dependencies -->
 		<spring-framework.version>6.0.0-SNAPSHOT</spring-framework.version>
 		<spring-retry.version>1.3.1</spring-retry.version>
-		<spring-integration.version>6.0.0-M1</spring-integration.version>
+		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
 		<micrometer.version>2.0.0-SNAPSHOT</micrometer.version>
 		<micrometer-tracing.version>1.0.0-SNAPSHOT</micrometer-tracing.version>
 		<jackson.version>2.13.1</jackson.version>
