--- a/build.gradle
+++ b/build.gradle
@@ -48,22 +48,22 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.16-SNAPSHOT'
+		springVersionDefault = '5.3.16'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.3.1'
-		springAmqpVersion = '2.3.15-SNAPSHOT'
-		springDataCommonsVersion = '2.4.16-SNAPSHOT'
-		springDataGeodeVersion = '2.4.16-SNAPSHOT'
-		springDataJpaVersion = '2.4.16-SNAPSHOT'
-		springDataMongodbVersion = '3.1.16-SNAPSHOT'
-		springIntegrationVersion = '5.4.14-SNAPSHOT'
-		springKafkaVersion = '2.6.13-SNAPSHOT'
-		springLdapVersion = '2.3.6.BUILD-SNAPSHOT'
-		micrometerVersion = '1.7.10-SNAPSHOT'
+		springAmqpVersion = '2.3.14'
+		springDataCommonsVersion = '2.4.15'
+		springDataGeodeVersion = '2.4.15'
+		springDataJpaVersion = '2.4.15'
+		springDataMongodbVersion = '3.1.15'
+		springIntegrationVersion = '5.4.13'
+		springKafkaVersion = '2.6.13'
+		springLdapVersion = '2.3.6.RELEASE'
+		micrometerVersion = '1.7.9'
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
-		aspectjVersion = '1.9.7'
+		aspectjVersion = '1.9.8'
 		commonsDdbcpVersion = '2.8.0'
 		commonsIoVersion = '2.8.0'
 		commonsLangVersion = '3.11'
@@ -71,13 +71,13 @@ allprojects {
 		derbyVersion = '10.14.2.0'
 		groovyVersion = '2.5.14'
 		hamcrestVersion = '2.2'
-		h2databaseVersion = '2.0.206'
-		hibernateVersion = '5.4.32.Final'
+		h2databaseVersion = '2.1.210'
+		hibernateVersion = '5.4.33.Final'
 		hibernateValidatorVersion = '6.1.7.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.2'
 		jackson2Version = '2.11.4'
-		gsonVersion = '2.8.6'
+		gsonVersion = '2.8.9'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
 		javaxAnnotationApiVersion = '1.3.2'
@@ -89,14 +89,14 @@ allprojects {
 		junitVersion = '4.13.2'
 		junitJupiterVersion = '5.8.2'
 		log4jVersion = '2.17.1'
-		mysqlVersion = '8.0.27'
+		mysqlVersion = '8.0.28'
 		mockitoVersion = '3.12.4'
-		postgresqlVersion = '42.2.24'
+		postgresqlVersion = '42.2.25'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
 		sqliteVersion = '3.32.3.3'
-		woodstoxVersion = '6.2.7'
+		woodstoxVersion = '6.2.8'
 		xmlunitVersion = '2.8.4'
 		xstreamVersion = '1.4.16'
 		jrubyVersion = '1.7.27'
@@ -107,8 +107,8 @@ allprojects {
 		docResourcesVersion = '0.2.5'
 		assertjVersion='3.22.0'
 		mongoDbDriverSyncVersion='4.1.2'
-		testcontainersVersion='1.16.2'
-		neo4jVersion='3.2.28'
+		testcontainersVersion='1.16.3'
+		neo4jVersion='3.2.29'
 	}
 
 	apply plugin: 'idea'
