--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -15,16 +15,26 @@
 		<environment>hsql</environment>
 	</properties>
 
+	<dependencyManagement>
+	  <dependencies>
+		<dependency>
+		  <groupId>org.springframework.batch</groupId>
+		  <artifactId>spring-batch-bom</artifactId>
+		  <version>5.0.0-SNAPSHOT</version>
+		  <type>pom</type>
+		  <scope>import</scope>
+		</dependency>
+	  </dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-core</artifactId>
-			<version>5.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-integration</artifactId>
-			<version>5.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -146,7 +156,6 @@
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-test</artifactId>
-			<version>5.0.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
