--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 		<spring-framework.version>6.0.0-M3</spring-framework.version>
 		<spring-retry.version>1.3.2</spring-retry.version>
 		<spring-integration.version>6.0.0-M2</spring-integration.version>
-		<micrometer.version>2.0.0-M3</micrometer.version>
+		<micrometer.version>2.0.0-SNAPSHOT</micrometer.version>
 		<jackson.version>2.13.2</jackson.version>
 
 		<!-- optional production dependencies -->
@@ -79,7 +79,7 @@
 		<junit-jupiter.version>5.8.2</junit-jupiter.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.0.0-M3</micrometer-tracing.version>
+		<micrometer-tracing.version>1.0.0-SNAPSHOT</micrometer-tracing.version>
 		<junit.version>4.13.2</junit.version>
 		<hamcrest.version>2.2</hamcrest.version>
 		<assertj.version>3.22.0</assertj.version>
