--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>micrometer-core</artifactId>
 			<version>${micrometer.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-observation</artifactId>
+			<version>${micrometer.version}</version>
+		</dependency>
 
 		<!-- optional production dependencies -->
 		<dependency>
