--- a/pom.xml
+++ b/pom.xml
@@ -53,18 +53,18 @@
 		<!-- production dependencies -->
 		<spring-framework.version>6.0.0-M3</spring-framework.version>
 		<spring-retry.version>1.3.2</spring-retry.version>
-		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
+		<spring-integration.version>6.0.0-M2</spring-integration.version>
 		<micrometer.version>2.0.0-M3</micrometer.version>
 		<jackson.version>2.13.2</jackson.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-geode.version>3.0.0-SNAPSHOT</spring-data-geode.version>
-		<spring-data-commons.version>3.0.0-SNAPSHOT</spring-data-commons.version>
-		<spring-data-jpa.version>3.0.0-SNAPSHOT</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.0.0-SNAPSHOT</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.0-SNAPSHOT</spring-kafka.version>
-		<spring-amqp.version>3.0.0-SNAPSHOT</spring-amqp.version>
-		<spring-ldap.version>3.0.0-SNAPSHOT</spring-ldap.version>
+		<spring-data-geode.version>3.0.0-M3</spring-data-geode.version>
+		<spring-data-commons.version>3.0.0-M3</spring-data-commons.version>
+		<spring-data-jpa.version>3.0.0-M3</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.0.0-M3</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.0-M3</spring-kafka.version>
+		<spring-amqp.version>3.0.0-M2</spring-amqp.version>
+		<spring-ldap.version>3.0.0-M1</spring-ldap.version>
 		<avro.version>1.9.2</avro.version>
 		<gson.version>2.9.0</gson.version>
 		<hibernate-core-jakarta.version>5.6.7.Final</hibernate-core-jakarta.version>
@@ -114,7 +114,7 @@
 		<jsonassert.version>1.5.0</jsonassert.version>
 
 		<!-- samples dependencies -->
-		<spring-rabbit.version>3.0.0-SNAPSHOT</spring-rabbit.version>
+		<spring-rabbit.version>3.0.0-M2</spring-rabbit.version>
 		<quartz.version>2.3.2</quartz.version>
 		<prometheus_pushgateway.version>0.15.0</prometheus_pushgateway.version>
 		<groovy.version>3.0.10</groovy.version>
