--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch</artifactId>
-		<version>5.0.0-SNAPSHOT</version>
+		<version>5.0.0-M2</version>
 	</parent>
 	<artifactId>spring-batch-samples</artifactId>
 	<packaging>jar</packaging>
@@ -19,12 +19,12 @@
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-core</artifactId>
-			<version>5.0.0-SNAPSHOT</version>
+			<version>5.0.0-M2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-integration</artifactId>
-			<version>5.0.0-SNAPSHOT</version>
+			<version>5.0.0-M2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -146,7 +146,7 @@
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-test</artifactId>
-			<version>5.0.0-SNAPSHOT</version>
+			<version>5.0.0-M2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
