--- a/spring-batch-test/pom.xml
+++ b/spring-batch-test/pom.xml
@@ -35,11 +35,6 @@
 			<artifactId>spring-test</artifactId>
 			<version>${spring-framework.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-		</dependency>
 
 		<!-- optional production dependencies -->
 		<dependency>
@@ -52,6 +47,12 @@
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 			<version>${aspectj.version}</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
