--- a/build.gradle
+++ b/build.gradle
@@ -48,18 +48,18 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.16'
+		springVersionDefault = '5.3.19-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.3.1'
-		springAmqpVersion = '2.3.14'
-		springDataCommonsVersion = '2.4.15'
-		springDataGeodeVersion = '2.4.15'
-		springDataJpaVersion = '2.4.15'
-		springDataMongodbVersion = '3.1.15'
-		springIntegrationVersion = '5.4.13'
-		springKafkaVersion = '2.6.13'
-		springLdapVersion = '2.3.6.RELEASE'
-		micrometerVersion = '1.7.9'
+		springRetryVersion = '1.3.2'
+		springAmqpVersion = '2.3.16-SNAPSHOT'
+		springDataCommonsVersion = '2.5.11-SNAPSHOT'
+		springDataGeodeVersion = '2.5.11-SNAPSHOT'
+		springDataJpaVersion = '2.5.11-SNAPSHOT'
+		springDataMongodbVersion = '3.2.11-SNAPSHOT'
+		springIntegrationVersion = '5.5.11-SNAPSHOT'
+		springKafkaVersion = '2.7.13-SNAPSHOT'
+		springLdapVersion = '2.3.7.BUILD-SNAPSHOT'
+		micrometerVersion = '1.7.11-SNAPSHOT'
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
