--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -176,6 +176,12 @@
 			<version>${junit-jupiter.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>${junit-jupiter.version}</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
 			<version>${hamcrest.version}</version>
