--- a/build.gradle
+++ b/build.gradle
@@ -48,18 +48,18 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.19-SNAPSHOT'
+		springVersionDefault = '5.3.20-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.3.2'
+		springRetryVersion = '1.3.3-SNAPSHOT'
 		springAmqpVersion = '2.3.16-SNAPSHOT'
 		springDataCommonsVersion = '2.5.11-SNAPSHOT'
 		springDataGeodeVersion = '2.5.11-SNAPSHOT'
 		springDataJpaVersion = '2.5.11-SNAPSHOT'
 		springDataMongodbVersion = '3.2.11-SNAPSHOT'
 		springIntegrationVersion = '5.5.11-SNAPSHOT'
-		springKafkaVersion = '2.7.13-SNAPSHOT'
-		springLdapVersion = '2.3.7.BUILD-SNAPSHOT'
-		micrometerVersion = '1.7.11-SNAPSHOT'
+		springKafkaVersion = '2.7.14-SNAPSHOT'
+		springLdapVersion = '2.3.8.BUILD-SNAPSHOT'
+		micrometerVersion = '1.7.12-SNAPSHOT'
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
