--- a/spring-batch-bom/pom.xml
+++ b/spring-batch-bom/pom.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.springframework.batch</groupId>
+	<parent>
+		<groupId>org.springframework.batch</groupId>
+		<artifactId>spring-batch</artifactId>
+		<version>5.0.0-SNAPSHOT</version>
+	</parent>
 	<artifactId>spring-batch-bom</artifactId>
+	<packaging>pom</packaging>
 	<name>Spring Batch BOM</name>
 	<description>Bill of materials for Spring Batch modules</description>
-	<version>5.0.0-SNAPSHOT</version>
-	<packaging>pom</packaging>
 	<url>https://projects.spring.io/spring-batch</url>
 
 	<organization>
@@ -62,5 +65,18 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>${maven-site-plugin.version}</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
