Update flatten-maven-plugin to resolve dependencyManagement in pom files
This is required to keep the dependencyManagement section in
the pom of spring-batch-bom and resolve dependency versions.

--- a/pom.xml
+++ b/pom.xml
@@ -257,6 +257,7 @@
 							<flattenMode>ossrh</flattenMode>
 							<pomElements>
 								<distributionManagement>remove</distributionManagement>
+								<dependencyManagement>resolve</dependencyManagement>
 								<repositories>remove</repositories>
 								<scm>keep</scm>
 								<url>keep</url>
