--- a/build.gradle
+++ b/build.gradle
@@ -48,36 +48,36 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.20-SNAPSHOT'
+		springVersionDefault = '5.3.20'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.3.3-SNAPSHOT'
-		springAmqpVersion = '2.3.16-SNAPSHOT'
-		springDataCommonsVersion = '2.5.11-SNAPSHOT'
-		springDataGeodeVersion = '2.5.11-SNAPSHOT'
-		springDataJpaVersion = '2.5.11-SNAPSHOT'
-		springDataMongodbVersion = '3.2.11-SNAPSHOT'
-		springIntegrationVersion = '5.5.11-SNAPSHOT'
-		springKafkaVersion = '2.7.14-SNAPSHOT'
-		springLdapVersion = '2.3.8.BUILD-SNAPSHOT'
-		micrometerVersion = '1.7.12-SNAPSHOT'
+		springRetryVersion = '1.3.3'
+		springAmqpVersion = '2.3.16'
+		springDataCommonsVersion = '2.5.11'
+		springDataGeodeVersion = '2.5.11'
+		springDataJpaVersion = '2.5.11'
+		springDataMongodbVersion = '3.2.11'
+		springIntegrationVersion = '5.5.12'
+		springKafkaVersion = '2.7.14'
+		springLdapVersion = '2.3.8.RELEASE'
+		micrometerVersion = '1.7.12' // TODO this is the last version in the 1.7.x line, upgrade to 1.8.x in 4.3.7
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
-		aspectjVersion = '1.9.8'
-		commonsDdbcpVersion = '2.8.0'
-		commonsIoVersion = '2.8.0'
-		commonsLangVersion = '3.11'
+		aspectjVersion = '1.9.9.1'
+		commonsDdbcpVersion = '2.9.0'
+		commonsIoVersion = '2.11.0'
+		commonsLangVersion = '3.12.0'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
-		groovyVersion = '2.5.14'
+		groovyVersion = '2.5.16'
 		hamcrestVersion = '2.2'
-		h2databaseVersion = '2.1.210'
+		h2databaseVersion = '2.1.212'
 		hibernateVersion = '5.4.33.Final'
 		hibernateValidatorVersion = '6.1.7.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.2'
 		jackson2Version = '2.11.4'
-		gsonVersion = '2.8.9'
+		gsonVersion = '2.9.0'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
 		javaxAnnotationApiVersion = '1.3.2'
@@ -88,8 +88,8 @@ allprojects {
 		jmsVersion = '2.0.1'
 		junitVersion = '4.13.2'
 		junitJupiterVersion = '5.8.2'
-		log4jVersion = '2.17.1'
-		mysqlVersion = '8.0.28'
+		log4jVersion = '2.17.2'
+		mysqlVersion = '8.0.29'
 		mockitoVersion = '3.12.4'
 		postgresqlVersion = '42.2.25'
 		quartzVersion = '2.3.2'
@@ -97,7 +97,7 @@ allprojects {
 		sqlfireclientVersion = '1.0.3'
 		sqliteVersion = '3.32.3.3'
 		woodstoxVersion = '6.2.8'
-		xmlunitVersion = '2.8.4'
+		xmlunitVersion = '2.9.0'
 		xstreamVersion = '1.4.19'
 		jrubyVersion = '1.7.27'
 		beanshellVersion = '2.0b5'
@@ -106,9 +106,9 @@ allprojects {
 		prometheusPushgatewayVersion = '0.10.0'
 		docResourcesVersion = '0.2.5'
 		assertjVersion='3.22.0'
-		mongoDbDriverSyncVersion='4.1.2'
-		testcontainersVersion='1.16.3'
-		neo4jVersion='3.2.29'
+		mongoDbDriverSyncVersion='4.6.0' // used only in tests and samples
+		testcontainersVersion='1.17.1'
+		neo4jVersion='3.2.33'
 	}
 
 	apply plugin: 'idea'
