--- a/build.gradle
+++ b/build.gradle
@@ -48,18 +48,18 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.20'
+		springVersionDefault = '5.3.21-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.3.3'
-		springAmqpVersion = '2.3.16'
-		springDataCommonsVersion = '2.5.11'
-		springDataGeodeVersion = '2.5.11'
-		springDataJpaVersion = '2.5.11'
-		springDataMongodbVersion = '3.2.11'
-		springIntegrationVersion = '5.5.12'
-		springKafkaVersion = '2.7.14'
-		springLdapVersion = '2.3.8.RELEASE'
-		micrometerVersion = '1.7.12' // TODO this is the last version in the 1.7.x line, upgrade to 1.8.x in 4.3.7
+		springRetryVersion = '1.3.4-SNAPSHOT'
+		springAmqpVersion = '2.3.17-SNAPSHOT'
+		springDataCommonsVersion = '2.5.12-SNAPSHOT'
+		springDataGeodeVersion = '2.5.12-SNAPSHOT'
+		springDataJpaVersion = '2.5.12-SNAPSHOT'
+		springDataMongodbVersion = '3.2.12-SNAPSHOT'
+		springIntegrationVersion = '5.5.13-SNAPSHOT'
+		springKafkaVersion = '2.7.15-SNAPSHOT'
+		springLdapVersion = '2.3.9.BUILD-SNAPSHOT'
+		micrometerVersion = '1.8.7-SNAPSHOT'
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
