--- a/spring-batch-test/pom.xml
+++ b/spring-batch-test/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch</artifactId>
-		<version>5.0.0-SNAPSHOT</version>
+		<version>5.0.0-M3</version>
 	</parent>
 	<artifactId>spring-batch-test</artifactId>
 	<name>Spring Batch Test</name>
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-core</artifactId>
-			<version>5.0.0-SNAPSHOT</version>
+			<version>5.0.0-M3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
