Upgrade Derby to version 10.16.1.1

--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -190,6 +190,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derbytools</artifactId>
+			<version>${derby.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.sap.cloud.db.jdbc</groupId>
 			<artifactId>ngdbc</artifactId>
 			<version>${hana.version}</version>
