Exclude junit-jupiter from micrometer test dependencies

--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -88,6 +88,12 @@
 
 		<!-- test dependencies -->
 		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>${junit-jupiter.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>junit-jupiter</artifactId>
 			<version>${testcontainers.version}</version>
@@ -272,6 +278,12 @@
 			<artifactId>micrometer-test</artifactId>
 			<version>${micrometer.version}</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.jupiter</groupId>
+					<artifactId>junit-jupiter</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
