--- a/build.gradle
+++ b/build.gradle
@@ -48,18 +48,18 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.21-SNAPSHOT'
+		springVersionDefault = '5.3.23'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.3.4-SNAPSHOT'
-		springAmqpVersion = '2.3.17-SNAPSHOT'
-		springDataCommonsVersion = '2.5.12-SNAPSHOT'
-		springDataGeodeVersion = '2.5.12-SNAPSHOT'
-		springDataJpaVersion = '2.5.12-SNAPSHOT'
-		springDataMongodbVersion = '3.2.12-SNAPSHOT'
-		springIntegrationVersion = '5.5.13-SNAPSHOT'
-		springKafkaVersion = '2.7.15-SNAPSHOT'
-		springLdapVersion = '2.3.9.BUILD-SNAPSHOT'
-		micrometerVersion = '1.8.7-SNAPSHOT'
+		springRetryVersion = '1.3.3'
+		springAmqpVersion = '2.3.16'
+		springDataCommonsVersion = '2.5.12'
+		springDataGeodeVersion = '2.5.12'
+		springDataJpaVersion = '2.5.12'
+		springDataMongodbVersion = '3.2.12'
+		springIntegrationVersion = '5.5.15'
+		springKafkaVersion = '2.7.14'
+		springLdapVersion = '2.3.8.RELEASE'
+		micrometerVersion = '1.8.10'
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
@@ -71,13 +71,13 @@ allprojects {
 		derbyVersion = '10.14.2.0'
 		groovyVersion = '2.5.16'
 		hamcrestVersion = '2.2'
-		h2databaseVersion = '2.1.212'
+		h2databaseVersion = '2.1.214'
 		hibernateVersion = '5.4.33.Final'
 		hibernateValidatorVersion = '6.1.7.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.2'
 		jackson2Version = '2.11.4'
-		gsonVersion = '2.9.0'
+		gsonVersion = '2.9.1'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
 		javaxAnnotationApiVersion = '1.3.2'
@@ -88,10 +88,10 @@ allprojects {
 		jmsVersion = '2.0.1'
 		junitVersion = '4.13.2'
 		junitJupiterVersion = '5.8.2'
-		log4jVersion = '2.17.2'
-		mysqlVersion = '8.0.29'
+		log4jVersion = '2.19.0'
+		mysqlVersion = '8.0.30'
 		mockitoVersion = '3.12.4'
-		postgresqlVersion = '42.2.25'
+		postgresqlVersion = '42.2.26'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
@@ -103,12 +103,12 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		prometheusPushgatewayVersion = '0.10.0'
+		prometheusPushgatewayVersion = '0.16.0'
 		docResourcesVersion = '0.2.5'
-		assertjVersion='3.22.0'
-		mongoDbDriverSyncVersion='4.6.0' // used only in tests and samples
-		testcontainersVersion='1.17.1'
-		neo4jVersion='3.2.33'
+		assertjVersion='3.23.1'
+		mongoDbDriverSyncVersion='4.6.1' // used only in tests and samples
+		testcontainersVersion='1.17.3'
+		neo4jVersion='3.2.37'
 	}
 
 	apply plugin: 'idea'
