--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -151,6 +151,11 @@
 			<artifactId>simpleclient_pushgateway</artifactId>
 			<version>${prometheus_pushgateway.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 		
 		<!-- test dependencies -->
 		<dependency>
