Exclude jackson-core from avro dependency
This was bringing a version of Jackson that is
conflicting with the required version of Jackson.

--- a/spring-batch-infrastructure/pom.xml
+++ b/spring-batch-infrastructure/pom.xml
@@ -88,6 +88,12 @@
 			<artifactId>avro</artifactId>
 			<version>${avro.version}</version>
 			<optional>true</optional>
+			<exclusions>
+				<exclusion>
+					<groupId>com.fasterxml.jackson.core</groupId>
+					<artifactId>jackson-core</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
