--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
 		<!-- documentation dependencies -->
 		<asciidoctorj-pdf.version>1.6.2</asciidoctorj-pdf.version> <!-- FIXME build failure with version 2.3.3 -->
 		<asciidoctorj-epub.version>1.5.1</asciidoctorj-epub.version>
+		<spring-asciidoctor-backends.version>0.0.3</spring-asciidoctor-backends.version>
 
 		<!-- plugin versions -->
 		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
@@ -133,7 +134,6 @@
 		<maven-source-plugin.version>3.2.1</maven-source-plugin.version>
 		<jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
 		<flatten-maven-plugin.version>1.3.0</flatten-maven-plugin.version>
-		<maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
 		<maven-deploy-plugin.version>3.0.0</maven-deploy-plugin.version>
 		<asciidoctor-maven-plugin.version>2.2.2</asciidoctor-maven-plugin.version>
 		<maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
@@ -142,7 +142,6 @@
 		<maven-project-info-reports-plugin.version>3.4.1</maven-project-info-reports-plugin.version>
 		<maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
 		<maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
-		<build-helper-maven-plugin.version>3.3.0</build-helper-maven-plugin.version>
 		<spring-javaformat-maven-plugin.version>0.0.34</spring-javaformat-maven-plugin.version>
 	</properties>
 
@@ -337,27 +336,6 @@
 				</plugins>
 			</build>
 		</profile>
-		<profile>
-			<id>sign-artifacts</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>${maven-gpg-plugin.version}</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
 	</profiles>
 
 	<repositories>
@@ -455,7 +433,7 @@
 			<email>cschaefer@vmware.com</email>
 		</developer>
 		<developer>
-			<id>benas</id>
+			<id>fmbenhassine</id>
 			<name>Mahmoud Ben Hassine</name>
 			<email>mbenhassine@vmware.com</email>
 			<roles>
