--- a/spring-batch-test/pom.xml
+++ b/spring-batch-test/pom.xml
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-core</artifactId>
-			<version>5.0.1-SNAPSHOT</version>
+			<version>${parent.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
