Update build to deploy artifacts to Artifactory

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,15 @@
 		<system>Bamboo</system>
 		<url>https://build.spring.io/browse/BATCH</url>
 	</ciManagement>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>spring-snapshots</id>
+			<url>https://repo.spring.io/libs-snapshot-local</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+		</snapshotRepository>
+	</distributionManagement>
 	<licenses>
 		<license>
 			<name>Apache 2.0</name>
