--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,8 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots verify
+      - name: Build with Maven and deploy to Artifactory
+        run: mvn -s settings.xml --batch-mode --update-snapshots deploy
 
       - name: Generate Java docs
         run: mvn javadoc:aggregate
